--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ twitter_username: seansble
 github_username: seansble
 
 # Build settings
-theme: jekyll-theme-minimal
+theme: minima
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
